--- a/index.html
+++ b/index.html
@@ -3,10 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./js/data.js"></script>
+  <link rel="stylesheet" href="./css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="./js/data.js" defer></script>
+  <script src="./js/app.js" defer></script>
   <title>Better movies</title>
 </head>
 <body>
-  
-</body>
-</html>
+  <div class="app">
+
+    <aside>
+      <ul>
+        <li>a</li>
+        <li>a</li>
+        <li>a</li>
+      </ul>
+    </aside>
+    
+    <div class="main">
+      <nav>
+        <label class="input-group mb-3">
+          <input id="input-field" type="text" placeholder="Search Movie" >
+        </label>
+      </nav>
+      <div class="tag-container">
+        <p>most rated</p>
+        <p>most viewed</p>
+        <p>most popular</p>
+      </div>
+      <div class="movies-container">
+      </div>
+    </div>
+    
+    <div id="aside-movie">
+    </div>
+
+  </div>
+  </body>
+  </html>
