--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <aside>
       <ul>
-        <li>a</li>
-        <li>a</li>
-        <li>a</li>
+        <li>Trending</li>
+        <li>Popular</li>
+        <li>Top Rated</li>
       </ul>
     </aside>
     
@@ -27,15 +27,16 @@
         </label>
       </nav>
       <div class="tag-container">
-        <p>most rated</p>
-        <p>most viewed</p>
-        <p>most popular</p>
+        <p id="trending-button">Trending</p>
+        <p id="popular-button">Popular</p>
+        <p id="topRated-button">Top Rated</p>
       </div>
       <div class="movies-container">
       </div>
     </div>
     
     <div id="aside-movie">
+      <img id="close-button" width="48" height="48" src="https://img.icons8.com/fluency/48/close-window--v1.png" alt="close-window--v1"/>
     </div>
 
   </div>
