--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
   </head>
   <body>
     <div class="app">
+      <img id="menu-hamburguer" src="./assets/imgs/burger-menu-svgrepo-com.svg" alt="open aside button">
       <aside>
+        <img
+          width="48"
+          height="48"
+          src="https://img.icons8.com/fluency/48/close-window--v1.png"
+          alt="close-window--v1" />
         <ul>
           <li>Trending</li>
           <li>Popular</li>
@@ -42,16 +48,8 @@
       </div>
 
       <div id="aside-movie">
-        <img
-          id="close-button"
-          width="48"
-          height="48"
-          src="https://img.icons8.com/fluency/48/close-window--v1.png"
-          alt="close-window--v1" />
-        </div>
       </div>
       
     </div>
-    
   </body>
 </html>
