--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
   </head>
   <body>
     <div class="app">
-
-      <img id="menu-hamburguer" src="./assets/imgs/burger-menu-svgrepo-com.svg" alt="open aside button">
+      
       
       <aside>
         <img
-          id="close-button-aside"
+        id="close-button-aside"
           width="48"
           height="48"
           src="https://img.icons8.com/fluency/48/close-window--v1.png"
           alt="close-window--v1" />
-        <div style="background: none;" class="aside-links">
-          <ul>
+          <div style="background: none;" class="aside-links">
+            <ul>
             <div class="link">
               <img src="./assets/imgs/home.svg">
               <li>Discover</li>
@@ -63,7 +62,8 @@
       </aside>
 
       <div class="main">
-        <nav>
+        <nav style="background: none;">
+          <img id="menu-hamburguer" src="./assets/imgs/burger-menu-svgrepo-com.svg" alt="open aside button">
           <label class="input-group mb-3">
             <input id="input-field" type="text" placeholder="Search Movie" />
           </label>
