--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
           </ul>
           <ul>
-            <h5 style="background: none;">Genre</h5>
+            <h5 style="background: none; overflow: hidden;">Genre</h5>
             <div class="link">
               <li>Action</li>
             </div>
@@ -65,7 +65,7 @@
         <nav style="background: none;">
           <img id="menu-hamburguer" src="./assets/imgs/burger-menu-svgrepo-com.svg" alt="open aside button">
           <label class="input-group mb-3">
-            <input id="input-field" type="text" placeholder="Search Movie" />
+            <input id="input-field" type="text" placeholder="Search Movie">
           </label>
         </nav>
         <div class="tag-container">
