--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       
       <aside>
         <img
-        id="close-button-aside"
+          id="close-button-aside"
           width="48"
           height="48"
           src="https://img.icons8.com/fluency/48/close-window--v1.png"
-          alt="close-window--v1" />
+          alt="close-window--v1"/>
           <div style="background: none;" class="aside-links">
             <ul>
             <div class="link">
@@ -32,7 +32,7 @@
             </div>
             <div class="link">
               <img src="./assets/imgs/favorite.svg">
-              <li>Favorites</li>
+              <li id="favorites">Favorites</li>
             </div>
             <div class="link">
               <img src="./assets/imgs/clock.svg">
